added more pages with HTML

--- a/roman/about.html
+++ b/roman/about.html
@@ -12,8 +12,8 @@
 			<li><a href="index.html">Home</a></li>
 			<li><a href="categories.html">Categories of Rome</a></li>
 			<li><a href="timeline.html">Timeline</a></li>
-			<!--<li><a href="media.html">Media</a></li>-->
-			<!--<li><a href="tools.html">Tools</a></li>-->
+			<li><a href="media.html">Media</a></li>
+			<li><a href="tools.html">Tools</a></li>
 			<li><a href="about.html">About</a></li>
 		</ul>
 	</nav><!-- end nav bar -->
