--- a/roman/timeline.html
+++ b/roman/timeline.html
@@ -12,14 +12,24 @@
 			<li><a href="index.html">Home</a></li>
 			<li><a href="categories.html">Categories of Rome</a></li>
 			<li><a href="timeline.html">Timeline</a></li>
-			<!--<li><a href="media.html">Media</a></li>-->
-			<!--<li><a href="tools.html">Tools</a></li>-->
+			<li><a href="media.html">Media</a></li>
+			<li><a href="tools.html">Tools</a></li>
 			<li><a href="about.html">About</a></li>
 		</ul>
 	</nav><!-- end nav bar -->
 	<section>
 		<h1>Timeline</h1>
 		<table>
+			<!--
+			<tr>
+				<td> BC</td>
+				<td>
+					<h4></h4>
+					<p></p>
+					<p><a href="" target="_blank"></a></p>
+				</td>
+			</tr>
+			-->
 			<tr>
 				<td>753 BC</td>
 				<td>
@@ -48,11 +58,57 @@
 				</td>
 			</tr>
 			<tr>
+				<td>200 BC</td>
+				<td>
+					<h4>Hannibal</h4>
+					<p>Hannibal wages war against rome, and the Punic Wars result. Hannibal also marches into Italy over the Alps with elephants.</p>
+					<p><a href="http://www.imdb.com/title/tt0766213/">Hannibal - Rome's Worst Nightmare (BBC)</a></p>
+					<p><a href="http://www.youtube.com/watch?v=J1BKxeKtieM" target="_blank">YouTube</a></p>
+				</td>
+			</tr>
+			<tr>
+				<td>70 BC</td>
+				<td>
+					<h4>Third Servile War</h4>
+					<p>Spartacus leads a slave revolt against Rome.</p>
+					<p><a href="http://www.imdb.com/title/tt0361240/" target="_blank">Spartacus 2004</a></p>
+					<p><a href="http://www.imdb.com/title/tt1758429/" target="_blank">Spartacus: Gods of the Area</a></p>
+					<p><a href="http://www.imdb.com/title/tt1038086/" target="_blank">Spartacus: Gladiator War</a></p>
+					<p><a href="http://www.imdb.com/title/tt1442449/" target="_blank">Spartacus: War of the Damned</a></p>
+					<p><a href="http://www.imdb.com/title/tt0054331/" target="_blank">Spartacus 1960</a></p>
+				</td>
+			</tr>
+			<tr>
 				<td>44 BC</td>
 				<td>
 					<h4>Julius Caesar Assassinated</h4>
 					<p>He was assassinated by the Roman Sentate, led by Marcus Junius Brutus</p>
 					<p><a href="http://www.imdb.com/title/tt0384766/" target="_blank">Rome</a>, an HBO TV series on Julius Caesar and Rome</p>
+				</td>
+			</tr>
+			<tr>
+				<td>140 AD</td>
+				<td>
+					<h4>The 9th Legion's campaign in Britan</h4>
+					<p>Follows the 9th legion in Britan</p>
+					<p><a href="http://www.imdb.com/title/tt1034389/" target="_blank">The Eagle 2011 on IMDb</a></p>
+				</td>
+			</tr>
+			<tr>
+				<td>180 AD</td>
+				<td>
+					<h4>Romans fight the Germanic tribes</h4>
+					<p></p>
+					<p><a href="http://www.imdb.com/title/tt0172495/" target="_blank">Gladiator 2000 on IMDb</a></p>
+				</td>
+			</tr>
+			<tr>
+				<td>400 AD</td>
+				<td>
+					<h4>The Vandals Sack Rome</h4>
+					<p>The Vandals were an East Germanic tribe, or group of tribes, who were first heard of in southern Poland, but later moved around Europe establishing kingdoms in Spain and later North Africa in the 5th century.</p>
+					<p><a href="http://en.wikipedia.org/wiki/Vandals">Source</a></p>
+					<p><a href="http://www.youtube.com/watch?v=iJNuUnRDaas" target="_blank">The Vandals - Enemies of Rome</a></p>
 				</td>
 			</tr>
 		</table>
