Made some tweaks to HTML

--- a/roman/timeline.html
+++ b/roman/timeline.html
@@ -49,7 +49,7 @@
 				<td>386 BC</td>
 				<td>
 					<h4>Gauls Occupy Rome</h4>
-					<p>Rome was defeated by the Gauls from the North. The city was overrun and occupied by <span id="gauls"Gauls</span>.</p>
+					<p>Rome was defeated by the Gauls from the North. The city was overrun and occupied by <span id="gauls">Gauls</span>.</p>
 					<p>
 					<a href="http://www.imdb.com/title/tt1034389/" target="_blank">The Eagle</a>, a movied based in 140 AD dealing with Rome in <span id="britons">Briton</span>.
 					</p>
@@ -106,7 +106,7 @@
 				<td>400 AD</td>
 				<td>
 					<h4>The Vandals Sack Rome</h4>
-					<p>The Vandals were an East Germanic tribe, or group of tribes, who were first heard of in southern Poland, but later moved around Europe establishing kingdoms in Spain and later North Africa in the 5th century.</p>
+					<p>The <span id="vandals">Vandals</span> were an East Germanic tribe, or group of tribes, who were first heard of in southern Poland, but later moved around Europe establishing kingdoms in Spain and later North Africa in the 5th century.</p>
 					<p><a href="http://en.wikipedia.org/wiki/Vandals">Source</a></p>
 					<p><a href="http://www.youtube.com/watch?v=iJNuUnRDaas" target="_blank">The Vandals - Enemies of Rome</a></p>
 				</td>
