--- a/roman/favourites.html
+++ b/roman/favourites.html
@@ -19,7 +19,7 @@
 	</nav><!-- end nav bar -->
 	<section>
 		<h1>Zach's Favourites</h1>
-		<p>Most documentaries and Hollywood historical epics focus on sucking you into the Roman world. Crash Course from YouTube takes a more objective view, while still being awesomely entertaining.</p>
+		<p>Most documentaries and Hollywood historical epics focus on sucking you into the Roman world. Crash Course on YouTube takes a more objective view, while still being awesomely entertaining. These videos are great for a high level view of Roman history.</p>
 		<div>
 			<iframe width="1280" height="720" src="//www.youtube.com/embed/oPf27gAup9U" frameborder="0" allowfullscreen></iframe>
 		</div>
