HTML brand link in header

--- a/roman/index.html
+++ b/roman/index.html
@@ -5,7 +5,9 @@
 </head>
 <body>
 	<header>
-		<img src="images/logo.png" alt="brand logo" />
+		<a href="index.html">
+			<img src="images/logo.png" alt="brand logo" />
+		</a>
 	</header>
 	<nav><!-- start nav bar -->
 		<ul>
@@ -15,6 +17,8 @@
 			<li><a href="media.html">Media</a></li>
 			<li><a href="tools.html">Tools</a></li>
 			<li><a href="about.html">About</a></li>
+			<li><a href="sample1.html">Sample1</a></li>
+			<li><a href="sample2.html">Sample2</a></li>
 		</ul>
 	</nav><!-- end nav bar -->
 	<section>
