--- a/roman/categories.html
+++ b/roman/categories.html
@@ -5,7 +5,9 @@
 </head>
 <body>
 	<header>
-		<img src="images/logo.png" alt="brand logo" />
+		<a href="index.html">
+			<img src="images/logo.png" alt="brand logo" />
+		</a>
 	</header>
 	<nav><!-- start nav bar -->
 		<ul>
