--- a/roman/timeline.html
+++ b/roman/timeline.html
@@ -2,18 +2,19 @@
 <html>
 <head>
 <title>Roman History | History</title>
+<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 	<header>
 		<a href="index.html">
-			<img src="images/logo.png" alt="brand logo" />
+			<img id="brand" src="images/logo.png" alt="brand logo" />
 		</a>
 	</header>
-	<nav><!-- start nav bar -->
+	<nav id="main-menu"><!-- start nav bar -->
 		<ul>
 			<li><a href="index.html">Home</a></li>
 			<li><a href="categories.html">Categories of Rome</a></li>
-			<li><a href="timeline.html">Timeline</a></li>
+			<li><a class="active" href="timeline.html">Timeline</a></li>
 			<li><a href="media.html">Media</a></li>
 			<li><a href="tools.html">Tools</a></li>
 			<li><a href="about.html">About</a></li>
