--- a/roman/timeline.html
+++ b/roman/timeline.html
@@ -4,7 +4,7 @@
 <title>Roman History | History</title>
 <link rel="stylesheet" href="css/style.css">
 </head>
-<body>
+<body class="timeline">
 	<header>
 		<a href="index.html">
 			<img id="brand" src="images/logo.png" alt="brand logo" />
@@ -23,18 +23,9 @@
 	<section>
 		<h1>Timeline</h1>
 		<table>
-			<!--
 			<tr>
-				<td> BC</td>
-				<td>
-					<h4></h4>
-					<p></p>
-					<p><a href="" target="_blank"></a></p>
-				</td>
-			</tr>
-			-->
-			<tr>
-				<td>753 BC</td>
+				<td>753&nbsp;BC</td>
+				<td class="marker"><span class="marker"></span></td>
 				<td>
 					<h4>Founding of Rome</h4>
 					<p>Rome's history spans more than two and a half thousand years, since its legendary founding. Rome is one of the oldest continuously occupied cities in Europe.</p>
@@ -42,14 +33,16 @@
 				</td>
 			</tr>
 			<tr>
-				<td>510 BC</td>
+				<td>510&nbsp;BC</td>
+				<td class="marker"><span class="marker"></span></td>
 				<td>
 					<h4>Governance by Senate</h4>
 					<p>The Roman Republic begain in 510 BC when a Senate, made up of the people, governed the city. Prior to this, Rome was governed by kings in a monarchy.</p>
 				</td>
 			</tr>
 			<tr>
-				<td>386 BC</td>
+				<td>386&nbsp;BC</td>
+				<td class="marker"><span class="marker"></span></td>
 				<td>
 					<h4>Gauls Occupy Rome</h4>
 					<p>Rome was defeated by the Gauls from the North. The city was overrun and occupied by <span id="gauls">Gauls</span>.</p>
@@ -61,7 +54,8 @@
 				</td>
 			</tr>
 			<tr>
-				<td>200 BC</td>
+				<td>200&nbsp;BC</td>
+				<td class="marker"><span class="marker"></span></td>
 				<td>
 					<h4>Hannibal</h4>
 					<p>Hannibal wages war against rome, and the Punic Wars result. Hannibal also marches into Italy over the Alps with elephants.</p>
@@ -70,7 +64,8 @@
 				</td>
 			</tr>
 			<tr>
-				<td>70 BC</td>
+				<td>70&nbsp;BC</td>
+				<td class="marker"><span class="marker"></span></td>
 				<td>
 					<h4>Third Servile War</h4>
 					<p>Spartacus leads a slave revolt against Rome.</p>
@@ -82,7 +77,8 @@
 				</td>
 			</tr>
 			<tr>
-				<td>44 BC</td>
+				<td>44&nbsp;BC</td>
+				<td class="marker"><span class="marker"></span></td>
 				<td>
 					<h4>Julius Caesar Assassinated</h4>
 					<p>He was assassinated by the Roman Sentate, led by Marcus Junius Brutus</p>
@@ -90,7 +86,8 @@
 				</td>
 			</tr>
 			<tr>
-				<td>140 AD</td>
+				<td>140&nbsp;AD</td>
+				<td class="marker"><span class="marker"></span></td>
 				<td>
 					<h4>The 9th Legion's campaign in Britan</h4>
 					<p>Follows the 9th legion in Britan</p>
@@ -98,7 +95,8 @@
 				</td>
 			</tr>
 			<tr>
-				<td>180 AD</td>
+				<td>180&nbsp;AD</td>
+				<td class="marker"><span class="marker"></span></td>
 				<td>
 					<h4>Romans fight the Germanic tribes</h4>
 					<p></p>
@@ -106,7 +104,8 @@
 				</td>
 			</tr>
 			<tr>
-				<td>400 AD</td>
+				<td>400&nbsp;AD</td>
+				<td class="marker"><span class="marker"></span></td>
 				<td>
 					<h4>The Vandals Sack Rome</h4>
 					<p>The <span id="vandals">Vandals</span> were an East Germanic tribe, or group of tribes, who were first heard of in southern Poland, but later moved around Europe establishing kingdoms in Spain and later North Africa in the 5th century.</p>
