--- a/roman/timeline.html
+++ b/roman/timeline.html
@@ -3,6 +3,7 @@
 <head>
 <title>Roman History | History</title>
 <link rel="stylesheet" href="css/style.css">
+<script src="js/linkify.js"></script>
 </head>
 <body class="timeline">
 	<header>
@@ -27,7 +28,7 @@
 				<td>753&nbsp;BC</td>
 				<td class="marker"><span class="marker"></span></td>
 				<td>
-					<h4>Founding of Rome</h4>
+					<h3>Founding of Rome</h3>
 					<p>Rome's history spans more than two and a half thousand years, since its legendary founding. Rome is one of the oldest continuously occupied cities in Europe.</p>
 					<p><a href="http://www.youtube.com/watch?v=JB732wBSTvw" target="_blank">Documentary</a> on the Rise of Rome</p>
 				</td>
@@ -36,7 +37,7 @@
 				<td>510&nbsp;BC</td>
 				<td class="marker"><span class="marker"></span></td>
 				<td>
-					<h4>Governance by Senate</h4>
+					<h3>Governance by Senate</h3>
 					<p>The Roman Republic begain in 510 BC when a Senate, made up of the people, governed the city. Prior to this, Rome was governed by kings in a monarchy.</p>
 				</td>
 			</tr>
@@ -44,7 +45,7 @@
 				<td>386&nbsp;BC</td>
 				<td class="marker"><span class="marker"></span></td>
 				<td>
-					<h4>Gauls Occupy Rome</h4>
+					<h3>Gauls Occupy Rome</h3>
 					<p>Rome was defeated by the Gauls from the North. The city was overrun and occupied by <span id="gauls">Gauls</span>.</p>
 					<p>
 					<a href="http://www.imdb.com/title/tt1034389/" target="_blank">The Eagle</a>, a movied based in 140 AD dealing with Rome in <span id="britons">Briton</span>.
@@ -57,7 +58,7 @@
 				<td>200&nbsp;BC</td>
 				<td class="marker"><span class="marker"></span></td>
 				<td>
-					<h4>Hannibal</h4>
+					<h3>Hannibal</h3>
 					<p>Hannibal wages war against rome, and the Punic Wars result. Hannibal also marches into Italy over the Alps with elephants.</p>
 					<p><a href="http://www.imdb.com/title/tt0766213/">Hannibal - Rome's Worst Nightmare (BBC)</a></p>
 					<p><a href="http://www.youtube.com/watch?v=J1BKxeKtieM" target="_blank">YouTube</a></p>
@@ -67,7 +68,7 @@
 				<td>70&nbsp;BC</td>
 				<td class="marker"><span class="marker"></span></td>
 				<td>
-					<h4>Third Servile War</h4>
+					<h3>Third Servile War</h3>
 					<p>Spartacus leads a slave revolt against Rome.</p>
 					<p><a href="http://www.imdb.com/title/tt0361240/" target="_blank">Spartacus 2004</a></p>
 					<p><a href="http://www.imdb.com/title/tt1758429/" target="_blank">Spartacus: Gods of the Area</a></p>
@@ -80,7 +81,7 @@
 				<td>44&nbsp;BC</td>
 				<td class="marker"><span class="marker"></span></td>
 				<td>
-					<h4>Julius Caesar Assassinated</h4>
+					<h3>Julius Caesar Assassinated</h3>
 					<p>He was assassinated by the Roman Sentate, led by Marcus Junius Brutus</p>
 					<p><a href="http://www.imdb.com/title/tt0384766/" target="_blank">Rome</a>, an HBO TV series on Julius Caesar and Rome</p>
 				</td>
@@ -89,7 +90,7 @@
 				<td>140&nbsp;AD</td>
 				<td class="marker"><span class="marker"></span></td>
 				<td>
-					<h4>The 9th Legion's campaign in Britan</h4>
+					<h3>The 9th Legion's campaign in Britan</h3>
 					<p>Follows the 9th legion in Britan</p>
 					<p><a href="http://www.imdb.com/title/tt1034389/" target="_blank">The Eagle 2011 on IMDb</a></p>
 				</td>
@@ -98,7 +99,7 @@
 				<td>180&nbsp;AD</td>
 				<td class="marker"><span class="marker"></span></td>
 				<td>
-					<h4>Romans fight the Germanic tribes</h4>
+					<h3>Romans fight the Germanic tribes</h3>
 					<p></p>
 					<p><a href="http://www.imdb.com/title/tt0172495/" target="_blank">Gladiator 2000 on IMDb</a></p>
 				</td>
@@ -107,7 +108,7 @@
 				<td>400&nbsp;AD</td>
 				<td class="marker"><span class="marker"></span></td>
 				<td>
-					<h4>The Vandals Sack Rome</h4>
+					<h3>The Vandals Sack Rome</h3>
 					<p>The <span id="vandals">Vandals</span> were an East Germanic tribe, or group of tribes, who were first heard of in southern Poland, but later moved around Europe establishing kingdoms in Spain and later North Africa in the 5th century.</p>
 					<p><a href="http://en.wikipedia.org/wiki/Vandals">Source</a></p>
 					<p><a href="http://www.youtube.com/watch?v=iJNuUnRDaas" target="_blank">The Vandals - Enemies of Rome</a></p>
