--- a/roman/about.html
+++ b/roman/about.html
@@ -3,6 +3,7 @@
 <head>
 <title>Roman History | History</title>
 <link rel="stylesheet" href="css/style.css">
+<script src="js/linkify.js"></script>
 </head>
 <body>
 	<header>
