--- a/roman/media.html
+++ b/roman/media.html
@@ -3,6 +3,7 @@
 <head>
 <title>Roman History | Gallery</title>
 <link rel="stylesheet" href="css/style.css">
+<script src="js/linkify.js"></script>
 </head>
 <body>
 	<header>
