unit 5 gladiator game added game instructions

--- a/roman/tools.html
+++ b/roman/tools.html
@@ -25,6 +25,7 @@
 	<section>
 		<h1>Gladiator Game</h1>
 		<div id="start-game-wrap">
+			<p class="subtle-text">Enter the arena. What we do in life, echoes throughout eternity. You will face a gladiator standing before you. You will see him attack you, and he'll shout at you. React below using the 3 red buttons. May the gods be with you.</p>
 			<a id="start-game" class="button"><h2>Start Game</h2><p class="subtle-text">(Be ready)</p></a>
 		</div>
 		<div id="gladiator-game">
@@ -32,13 +33,11 @@
 				<div id="player-health-wrap" class="health-bar-wrap">
 					<h2 id="player-health-text">You</h2>
 					<div id="player-health" class="health-bar">
-
 					</div>
 				</div>
 				<div id="player-health-wrap" class="health-bar-wrap">
 					<h2>Enemy</h2>
 					<div id="enemy-health" class="health-bar">
-
 					</div>
 				</div>
 			</div>
