added copy source functionality to site

--- a/roman/media.html
+++ b/roman/media.html
@@ -4,6 +4,9 @@
 <title>Roman History | Gallery</title>
 <link rel="stylesheet" href="css/style.css">
 <script src="js/linkify.js"></script>
+<script src="js/jquery-1.11.1.min.js"></script>
+<script src="js/ZeroClipboard.min.js"></script>
+<script src="js/copylink.js"></script>
 </head>
 <body>
 	<header>
