unit 7 rotten tomatoes ajax

--- a/roman/media.html
+++ b/roman/media.html
@@ -8,6 +8,7 @@
 <script src="js/instagram.js"></script>
 <script src="js/ZeroClipboard.min.js"></script>
 <script src="js/copylink.js"></script>
+<script src="js/rotten.js"></script>
 </head>
 <body>
 	<header>
@@ -28,6 +29,9 @@
 	<section>
 		<h1>Photo Gallery</h1>
 		<div id="instagram-gallery" class="row">
+		</div>
+		<h1>Movie Gallery</h1>
+		<div id="rotten-gallery" class="row">
 		</div>
 	</section>
 	<footer>
